--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+click==8.1.7
+falcon==3.1.3
+gunicorn==21.2.0
 schedule==1.2.1
 pandas~=2.0.3
+pandas_market_calendars==4.3.3
+waitress==3.0.0
 yfinance==0.2.36
-pandas_market_calendars
