--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ click==8.1.7
 falcon==3.1.3
 gunicorn==21.2.0
 schedule==1.2.1
+structlog==24.1.0
 pandas>=1.1,<2.0
 pandas_market_calendars==4.3.3
+pytz
 waitress==3.0.0
 yfinance==0.2.36
