--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
+alembic==1.13.1
 click==8.1.7
 falcon==3.1.3
 gunicorn==21.2.0
 schedule==1.2.1
+sqlalchemy==2.0.27
 structlog==24.1.0
 pandas>=1.1,<2.0
 pandas_market_calendars==4.3.3
+psycopg==3.1.18
 pytz
 waitress==3.0.0
 yfinance==0.2.36
