--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ sqlalchemy==2.0.27
 structlog==24.1.0
 pandas>=1.1,<2.0
 pandas_market_calendars==4.3.3
-psycopg==3.1.18
+psycopg2==2.9.9
 pytz
 waitress==3.0.0
 yfinance==0.2.36
