--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ falcon==3.1.3
 gevent==24.2.1
 gunicorn==21.2.0
 schedule==1.2.1
+setuptools==69.2.0
 sqlalchemy==2.0.27
 structlog==24.1.0
 pandas>=1.1,<2.0
