--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ dependency_injector==4.41.0
 falcon==3.1.3
 gevent==24.2.1
 gunicorn==21.2.0
+mypy==1.9.0
 schedule==1.2.1
 setuptools==69.2.0
 sqlalchemy==2.0.27
