--- a/tdv/infra/database/alembic/alembic.ini
+++ b/tdv/infra/database/alembic/alembic.ini
@@ -1,6 +1,6 @@
 [alembic]
 script_location = .
-file_template = %%(year)d-%%(month).2d-%%(day).2d_%%(hour).2d-%%(minute).2d_%%(slug)s
+file_template = %%(year)d-%%(month).2d-%%(day).2d_%%(hour).2d-%%(minute).2d-%%(second).2d_%%(slug)s
 prepend_sys_path = .
 version_path_separator = os  # Use os.pathsep. Default configuration used for new projects.
 sqlalchemy.url = None  # Declared in env.py
