--- a/mypy.ini
+++ b/mypy.ini
@@ -15,5 +15,5 @@ warn_unused_configs = True
 warn_incomplete_stub = True
 warn_redundant_casts = True
 warn_unreachable = True
-no_implicit_optional = True
+no_implicit_optional = False
 exclude = venv
