--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-alembic==1.13.1
-click==8.1.7
-dependency_injector==4.41.0
-falcon==3.1.3
-gevent==24.2.1
-gunicorn==21.2.0
-mypy==1.9.0
-schedule==1.2.1
-setuptools==69.2.0
-sqlalchemy==2.0.27
-structlog==24.1.0
-pandas>=1.1,<2.0
-pandas_market_calendars==4.3.3
-psycopg2-binary==2.9.9
+alembic
+click
+dependency_injector
+falcon
+gevent
+gunicorn
+mypy
+schedule
+setuptools
+sqlalchemy
+structlog
+pandas
+pandas_market_calendars
+psycopg2-binary
 pytz
-yfinance==0.2.36
+yfinance
